# g3c

./: AUTHORS  G3C Peer 2 Peer.sln  G3C Peer 2 Peer.vcproj  INSTALL  Makefile.in  README  config.h.in  configure  configure.in  depcomp  install-sh  libtool  missing
src/: Makefile.am  Makefile.in
src/g3c-core/: Makefile.am  Makefile.in  g3c_dlopen.c  g3c_dlopen.h  g3c_hooks.h  g3c_loader.c  g3c_main.c  g3c_plugin.h  g3c_register.c  g3c_register.h
src/g3c-lib/: Makefile.am  Makefile.in  examples.list.c  g3c_btypes.h  g3c_lib.h  g3c_list.c  g3c_list.h
src/g3c-plugins/: g3c_hooks.h  g3c_plugin.h
src/g3c-plugins/dummy/: dummy.c  dummy.h
